nextcloud/nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  
spec:
  rules:
  - host: stockage.beta.numerique.gouv.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-dinum
            port:
              number: 8080
  tls:
  - hosts:
    - stockage.beta.numerique.gouv.fr
    secretName: betanum
